Move stored user data to a separate entity
The user data entity classes are structured like a user

--- a/CloudStorage.Web/CloudStorage.Web.csproj
+++ b/CloudStorage.Web/CloudStorage.Web.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Storages\Dto\" />
     <Folder Include="Controllers\Users\Dto\" />
   </ItemGroup>
 
